Fixed Toolbox Text Alignment

--- a/wp-content/themes/bb-theme-child/css/main.css
+++ b/wp-content/themes/bb-theme-child/css/main.css
@@ -4010,10 +4010,10 @@ header #sr-header-con .fl-row-content-wrap {
     height: 90px; }
   .home-tool-section-con .icon {
     display: table;
-    height: 90px; }
+    height: 60px; }
   .home-tool-section-con .icon > div.fl-node-content {
     display: table-cell;
-    height: 90px;
+    height: 60px;
     vertical-align: middle; }
   .learn-more {
     display: table;
@@ -4021,7 +4021,9 @@ header #sr-header-con .fl-row-content-wrap {
   .learn-more > div.fl-node-content {
     display: table-cell;
     height: 60px;
-    vertical-align: middle; } }
+    vertical-align: middle; }
+  .bottom-line {
+    height: 20px; } }
 
 @media screen and (max-width: 500px) {
   .blue-stripe:before {
